ElectionPrograms overflow fix :/

--- a/app/stylesheets/_general.sass
+++ b/app/stylesheets/_general.sass
@@ -36,9 +36,13 @@ h1.main-title
 	background: linear-gradient(135deg, #ffa355 0%,#d85c75 100%) #d85c75
 	background-image: linear-gradient(136deg, #ffa355 0%,#d85c75 100%) #d85c75
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa355', endColorstr='#d85c75',GradientType=1 )
+	-webkit-background-size: cover
+	-moz-background-size: cover
+	-o-background-size: cover
+	background-size: cover
 	background-attachment: fixed
 	background-repeat: no-repeat
-	background-size: 100vw 100vh
+	background-size: 100% 100%
 .gradient-modal
 	background: $orange
 	background: -moz-linear-gradient(204deg, #d85c75, #ffa256 99%, #ffa355)
