--- a/app/stylesheets/election_apps/_app_description.sass
+++ b/app/stylesheets/election_apps/_app_description.sass
@@ -7,13 +7,12 @@
       padding: 0.4rem 2rem
       margin: 0.3rem auto
       img
-        width: 2rem
-        position: relative
-        top: 3px
+        width: 34px
+        top: 2px
       .text
         margin: auto
       .icon
-        float: left
+        position: absolute
   .app-title
     @include media-breakpoint-down(sm)
       border-bottom: 1px solid $white
